[tool.poetry]
name = "wampus"
version = "0.1.0"
description = ""
authors = ["Kirill Churkin <k.churkin@bi.zone>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.11.1"
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length=79
